--- a/trabalheconosoco.html
+++ b/trabalheconosoco.html
@@ -28,24 +28,12 @@
 
     </NAv>
     <main>
-        <div id="lol">
-            <img id="lol" src="comecon.png" alt="HISTÓRIA EM QUADRINHOS ">
-        </div>
-        <div id="galeria">
-            <div style="background-color:red ;">
-                <img src="Ghana.png" alt="">
-                <P>Gana continua existindo</P>
-            </div>
-            <div style="background-color:blue ;">
-                <img src="Algeria.png" alt="">
-                <p>Argélia ainda odeia a França</p>
-            </div>
-            <div style="background-color:green ;">
-                <img src="Serbia.png" alt="">
-                <p>Sérvia ainda não reconhece país não existente</p>
-            </div>
-        </div>
-        
+      <form>
+      <p>
+        <label>Nome</label>
+        <input type="text" name="nome" size="70">
+      </p>
+    </form>
     </main>
     <footer>
         <p>
