--- a/trabalheconosoco.html
+++ b/trabalheconosoco.html
@@ -30,8 +30,12 @@
     <main>
       <form>
       <p>
-        <label>Nome</label>
-        <input type="text" name="nome" size="70">
+        <label for="nome">NOME:</label>
+        <input type="text" name="nome" size="70" maxlength="70">
+      </p>
+      <p>
+        <label for="endereco">ENDEREÇO:</label>
+        <input type="text" name="endereco" size="70" maxlength="70">
       </p>
     </form>
     </main>
