--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="Guia.css">
+    <link rel="stylesheet" href="trabalhe conosco.css">
 <body>
     <header>
         <div>
