--- a/trabalheconosoco.html
+++ b/trabalheconosoco.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="Guia.css">
+    <link rel="stylesheet" href="trabalhe conosco.css">
 <body>
     <header>
         <div>
@@ -37,6 +38,33 @@
         <label for="endereco">ENDEREÇO:</label>
         <input type="text" name="endereco" size="70" maxlength="70">
       </p>
+      <p>
+        <label for="bairro" >BAIRRO:</label>
+        <input type="text" name="bairro" size="25" maxlength="25" id="bairro">
+        <label for="cidade">CIDADE:</label>
+        <input type="text" name="cidade" size="29" maxlength="29">
+      </p>
+      <p>
+        <label for="cep">CEP:</label>
+        <input type="text" name="cep" size="9" maxlength="9">
+        <label for="estado">ESTADO:</label>
+        <select name="estado" id="estado">
+                <option value="SP">São Paulo</option>
+                <option value="RJ">Rio de Janeiro</option>
+                <option value="BA">Bahia</option>
+        </select>        
+      </p>
+      <p>
+        <label for="telefone" >TELEFONE:</label>
+        <input type="tel" name="telefone" size="25" maxlength="25" id="telefone">
+        <label for="email">E-MAIL:</label>
+        <input type="email" name="email" size="29" maxlength="29">
+      </p>
+      <label for="sexo" >SEXO:</label>
+      <input type="radio" name="sexo"><span>Masc</span>
+      <input type="radio" name="sexo"><span>Fem</span>
+      <input type="radio" name="sexo"><span>Outro</span>
+
     </form>
     </main>
     <footer>
